--- a/MartyJBot/src/main/resources/application.properties
+++ b/MartyJBot/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=5000
 localeTag=ru-RU
 
-pingtaskurl=https://www.google.com/
-pingtaskperiod=1200000
+pingtaskurl=https://martyj-bot.herokuapp.com/
+pingtaskperiod=600000
 
 telegrambot.userName=@martyj_bot
 telegrambot.botToken=1810434406:AAF6O3f9LJxbXW-ctv0mxUnIsIZQArY5Gvo
